# soarm_sim

./: .gitignore  Dockerfile  docker_build.sh  mujoco_viewer.py  pyproject.toml  run.py  run_docker_container.sh  soarm_sim.py  utils.py
robot_models/so100/: so100.urdf  so100_arm.xml
robot_models/so101/: scene.xml  so101_arm.urdf  so101_arm.xml
